<resources>
    <string name="app_name">Owl In One</string>
    <string name="app_name_2">Owl In One</string>

    <string name="titre_page_principale">Articles</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="api_debug_key">AIzaSyCyZbnFvalPGR9h1aJZJel8_7VtcDfCmPc</string>

    <!--Définition des strings concernant le nom des activités dans le drawer et les toolbars-->
    <string name="app_compte">Compte</string>
    <string name="app_article">Articles</string>
    <string name="app_calendrier">Événements</string>
    <string name="app_covoiturage">Covoiturage</string>
    <string name="app_appartement">Appartements</string>
    <string name="app_bug">Signaler un bug</string>
    <string name="app_a_propos">À propos</string>

    <!--Définition des strings concernant le header du drawer et général à l'appli-->
    <string name="bienvenue">Bienvenue </string>
    <string name="action_settings">Settings</string>

    <!-- Définition des strings pour l'activité appartement -->
    <string name="euro">€ CC/mois</string>
    <string name="Trierpar">Trier par:</string>
    <string name="TrierDispo">Disponibilité</string>
    <string name="TrierPrix">Prix</string>
    <string name="TrierDeux">Les deux</string>
    <string name="dialog_appart">Ajouter un appartement</string>
    <string name="validerAppart">Valider</string>
    <string name="annulerAppart">Annuler</string>
    <string name="nom_prop_add">Nom</string>
    <string name="adresse_apart_add">Adresse appartement</string>
    <string name="ville_appart_add">Ville</string>
    <string name="descrip_appart_add">Description</string>
    <string name="detail_appart_add">Description</string>
    <string name="tel_prop_add">Téléphone</string>
    <string name="prix_appart_add">Prix</string>
    <string name="detail_appart">Chez</string>
    <string name="appartement">Liste des appartements</string>
    <string name="metreCarre">m²</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="CP_appart_add">Code Postal</string>
    <string name="disponible">Disponible</string>
    <string name="nonDisponible">Non disponible</string>
    <string name="vendu">Vendu</string>
    <string name="parametre">Paramètres</string>
    <string name="signaler">Signaler</string>
    <string name="merci">Merci, votre appartement à été ajouté avec succès</string>
    <string name="textCheckBoxAdd">Je certifie l\'exactitude et l\'authenticité des données saisies. Les
    données ne pourront pas être modifiées.</string>
    <string name="about">About</string>
    <string name="hello_world">Hello world!</string>

    <!-- Définition des strings pour l'activité Session, Login et Inscription -->
    <string name="username">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="newPassword">Nouveau mot de passe</string>
    <string name="reNewPassword">Réécrire le mot de passe</string>
    <string name="codePassword">Code</string>
    <string name="email">Adresse Email (@esaip.org)</string>
    <string name="login">Se connecter</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="registration_instruction">Vous n\'êtes pas encore inscrits? Inscrivez-vous dès maintenant</string>
    <string name="register_button">Se connecter</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="welcome">BIENVENUE</string>
    <string name="is_login">Connexion réussie </string>
    <string name="sign_up">S\'inscrire</string>
    <string name="sign_up2">Valider l\'inscription</string>
    <string name="sign_up_password">Valider le mot de passe</string>
    <string name="valider_activation">Valider le code</string>
    <item   name="actionsettings" type="id">Settings</item>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="déconnexion">Déconnexion</string>
    <string name="compte">Compte</string>
    <string name="mdpCourt">Mot de passe trop court</string>
    <string name="mdpDifferent">Les mots de passes sont différents</string>
    <string name="remplirToutChamps">Veuillez remplir tous les champs</string>
    <string name="codeFaux">Le code est faux</string>
    <string name="mdpChange">Mot de passe changé</string>
    <string name="mailInconnu">Cet email est inconnu</string>
    <string name="pseudoMdpRequis">Pseudo et mot de passe requis</string>
    <string name="pseudoMdpCaractere">Le pseudo et le mot de passe doivent dépasser 3 caractères</string>
    <string name="pseudoMdpIncorrect">Pseudo ou Mot de passe incorrect</string>
    <string name="connexionObligatoire">Connexion obligatoire</string>
    <string name="pseudoMdpUtilise">Le pseudo ou l\'email est déjà utilisé</string>
    <string name="mailFormat">Votre email doit être sous la forme @esaip.org</string>
    <string name="codeNouveauMail">Vous avez reçu un nouveau code par mail</string>


    <!-- Définition des strings pour le covoiturage -->
    <string name="intro_covoiturage">Avec Owl In One, rentrez chez vous ou venez à l\'ESAIP en quelques clics !</string>
    <string name="conducteur">Voir vos notifications</string>
    <string name="gcm_send_message">Vous pouvez recevoir des notifications push !</string>
    <string name="registering_message">Génération du token...</string>
    <string name="token_error_message">Vous ne pouvez pas encore recevoir de notifications push</string>
    <string name="client">Rechercher un trajet</string>
    <string name="newMdp">Mot de passe oublié</string>
    <string name="newMdp2">Nouveau mot de passe</string>
    <string name="rechercheCovoit">Recherche</string>
    <string name="notificationCovoit">Notifications</string>
    <string name="premiereConnexionClient">premiereConnexionClient</string>

    <string name="DestinationNotif">Destination:</string>
    <string name="HomeNotif">Vers Domicile</string>
    <string name="SchoolNotif">Vers Esaip</string>

    <string name="prenomBold"><i>Prénom</i></string>
    <string name="nomBold"><i>Nom</i></string>
    <string name="telephoneBold"><i>Téléphone</i></string>
    <string name="adresseBold"><i>Adresse</i></string>
    <string name="adresse2Bold"><i>Adresse de l\'appartement</i></string>
    <string name="codePostalBold"><i>Code Postal</i></string>
    <string name="villeBold"><i>Ville</i></string>

    <string name="pseudoBold"><i>Pseudo</i></string>
    <string name="mdpBold"><i>Mot de passe</i></string>
    <string name="remdpBold"><i>Retaper Mot de passe</i></string>

    <string name="emailBold"><i>Email (@esaip.org)</i></string>
    <string name="email2Bold"><i>Email</i></string>
    <string name="prixBold"><i>Prix (charges comprises)</i></string>
    <string name="descriptionBold"><i>Description</i></string>
    <string name="codeBold"><i>Code reçu par email</i></string>

    <string name="a_propos_text">Avec Owl In One, rentrez chez vous
        ou venez à l\'ESAIP en quelques clics !</string>

    <string name="titreCovoiturage">Covoiturage</string>
    <string name="saisirCoordonneeCovoiturage">Merci de saisir vos coordonnées</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>
    <string name="accepterCovoiturage">Accepter le covoiturage ?</string>
    <string name="toastNotifAccepterCovoiturage">Notification push envoyée, vous pouvez envoyer un sms en effectuant un appui long sur l\'item</string>
    <string name="toastNotifRefuserCovoiturage">Refusé</string>
    <string name="toastNotifSpamCovoiturage">Vous avez déjà envoyé une notification</string>


    <!-- Définition des strings pour le rapport de bug -->
    <string name="bugTitle">Rapportez-nous les bugs ou envoyez-nous des suggestions d\'amélioration</string>
    <string name="bugSpinnerTitle">Choisissez une catégorie:</string>
    <string name="bugSpinner1">Bug</string>
    <string name="bugSpinner2">Suggestion</string>
    <string name="bugSpinner3">Autres</string>
    <string name="bugFeedbackBody">Décrivez votre remarque...</string>
    <string name="bugSubmitButton">Envoyez votre remarque</string>
    <string name="detaillerBug">Merci de mieux détailler votre rapport</string>
    <string name="rapportExist">Le rapport existe déjà !</string>
    <string name="rapportEnvoye">Rapport envoyé! Merci</string>
    <string name="rapportProbleme">Un problème est survenu. Veuillez réessayer !</string>


    <!-- Définition des strings pour le général -->
    <string name="chargement">Chargement...</string>
    <string name="problemeServeur">Problème de connexion au serveur</string>
    <string name="problemeReseau">Problème de connexion</string>
    <string name="quitterApplication">Êtes-vous sûr de vouloir quitter?</string>


</resources>
