<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fond2"
    tools:context="owlinone.pae.LoginActivity">
    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/caldroid_holo_blue_light"
        android:textSize="30sp"
        android:background="@color/caldroid_transparent"
        android:textStyle="bold"
        android:layout_marginTop="157dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/login_user"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_login"
        android:id="@+id/message"
        android:textColor="#ffffff"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/login_user"
        android:layout_centerHorizontal="true" />
</RelativeLayout>