<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fond2"
    tools:context="owlinone.pae.session.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:textAlignment="center">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar6"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:elevation="0dp"
            app:title="@string/inscription"
            android:layout_gravity="center"
            android:animateLayoutChanges="false"
            />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_user"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="4dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:inputType="textCapSentences"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:layout_marginEnd="20dp"
        android:id="@+id/username_field"
        android:ems="10"
        android:hint="@string/pseudoBold"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/photo_user"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPassword|textCapSentences"
        android:ems="10"
        android:background="#11000000"
        android:hint="@string/mdpBold"
        android:textColorHint="@color/colorGrey"
        android:textSize="16dp"
        android:id="@+id/password_field"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorWhite"
        android:layout_marginEnd="100dp"
        android:drawableLeft="@drawable/ic_action_pass"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username_field"
        />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/password_field"
            android:layout_below="@+id/password_field"
            android:layout_marginTop="10dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_mail"
            android:ems="10"
            android:hint="@string/emailBold"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGrey"
            android:textSize="16dp" />

        <Button
            android:id="@+id/sign_up"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/email_field"
            android:layout_below="@+id/email_field"
            android:layout_marginTop="19dp"
            android:background="@drawable/background_signup"
            android:clickable="true"
            android:text="@string/sign_up2"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/code_activation"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:background="#11000000"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/colorGrey"
            android:textSize="16dp"
            android:textColor="@color/colorWhite"
            android:drawableLeft="@drawable/ic_action_key"
            android:hint="@string/codeBold"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password_field"
            />

        <Button
            android:id="@+id/btn_activation"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/background_login"
            android:layout_centerHorizontal="true"
            android:text="@string/valider_activation"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/email_field"
            android:textColor="@color/caldroid_holo_blue_light"
            android:textAllCaps="false"
            android:clickable="true"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            />

    </RelativeLayout>
    </LinearLayout>