<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_login"
    android:background="@drawable/fond2"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:textAlignment="center">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar5"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:elevation="0dp"
            app:title="@string/connexion"
            android:layout_gravity="center"
            app:titleMarginStart="20dp"
            android:animateLayoutChanges="false"
            />
    </android.support.design.widget.AppBarLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/owl_in_one_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_name"
        android:layout_marginEnd="20dp"
        android:id="@+id/username_field"
        android:ems="10"
        android:hint="@string/pseudoBold"
        android:textColorHint="@color/colorGrey"
        android:inputType="textCapSentences"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/password_field"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:layout_below="@+id/username_field"
        android:layout_alignStart="@+id/username_field"
        android:background="#11000000"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:drawableStart="@drawable/ic_action_pass"
        android:hint="@string/mdpBold"
        android:inputType="textPassword|textCapSentences"
        android:imeOptions="actionDone"
        android:layout_marginBottom="30dp"/>



    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/background_login"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/caldroid_holo_blue_light"
        android:textAllCaps="false"
        android:focusable="true"
        android:clickable="true"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/background_signup"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:focusable="true"
        android:clickable="true"
         />

    <TextView
        android:id="@+id/mpd_oublie"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_button"
        android:layout_marginTop="20dp"
        android:text="Mot de passe oublié? Cliquez ici"
        android:onClick="onClick"
        android:textAlignment="center"
        android:focusable="true"
        android:clickable="true"/>

</RelativeLayout>
</LinearLayout>
